--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <h3>ทักษะเด่น</h3>
           <ul class="list">
             <li>UI/UX (Wireframe, Prototype, Micro-interaction)</li>
-            <li>Web Dev (HTML, CSS, JS, React/Next.js)</li>
+            <li>Web Dev (HTML, CSS,)</li>
             <li>Storytelling & Presentation</li>
           </ul>
         </div>
@@ -202,3 +202,4 @@
   </script>
 </body>
 </html>
+
