--- a/portfolio.html
+++ b/portfolio.html
@@ -33,20 +33,20 @@
 
       <!-- ตัวอย่างผลงาน 1 -->
       <article class="portfolio-card">
-        <img src="5.jpg" alt="งาน UX/UI" class="portfolio-img">
+        <img src="5.jpg" alt="งาน UX/UI" class="cert-nso.jpg">
         <h3>Certificate HTML & CSS</h3>
         <p>ผลงานอบรมด้าน HTML และ CSS</p>
       </article>
 
       <!-- ตัวอย่างผลงาน 2 -->
       <article class="portfolio-card">
-        <img src="4.jpg" alt="งาน Data camp" class="portfolio-img">
+        <img src="4.jpg" alt="งาน Data camp" class="portfolio-cert">
         <h3>NSO Data camp</h3>
         <p>ได้เข้าร่วมการอบรมเชิงปฏิบัติการส่งเสริมการนำข้อมูลสถิติไปใช้ประโยชน์
 สำหรับนักศึกษาระดับอุดมศึกษา NSO DATA CAMP</p>
       </article>
 
-     <article class="portfolio-card">
+     <article class="NSO Certificate">
   <div class="work-two-img">
     <img src="3.jpg" alt="ผลงาน     Prototype 1">
     <img src="2.jpg" alt="ผลงาน Prototype 2">
