Change image source from JPG to PNG format

--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,7 @@
 
       <!-- ตัวอย่างผลงาน 1 -->
       <article class="portfolio-card">
-        <img src="5.jpg" alt="งาน UX/UI" class="cert-nso.jpg">
+        <img src="5.png" alt="งาน UX/UI" class="cert-nso.jpg">
         <h3>Certificate HTML & CSS</h3>
         <p>ผลงานอบรมด้าน HTML และ CSS</p>
       </article>
